feat: upload Projeto Haskell - Sistema de Biblioteca

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
-dist
-dist-*
-cabal-dev
-*.o
+dist/
+dist-newstyle/
+.ghc.environment.*
+cabal.project.local
+cabal.project.local~
 *.hi
-*.hie
+*.o
 *.chi
 *.chs.h
 *.dyn_o
@@ -12,12 +13,5 @@ cabal-dev
 .hsenv
 .cabal-sandbox/
 cabal.sandbox.config
-*.prof
-*.aux
-*.hp
-*.eventlog
 .stack-work/
-cabal.project.local
-cabal.project.local~
-.HTF/
-.ghc.environment.*
+stack.yaml.lock
