chore: update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,9 @@ cabal.project.local~
 cabal.sandbox.config
 .stack-work/
 stack.yaml.lock
+
+# Configurações locais
+.vscode/
+.cabal-bin/
+.envrc
+hie.yaml
